--- a/View/Pages/MainPage.xaml
+++ b/View/Pages/MainPage.xaml
@@ -84,7 +84,7 @@
                                 Foreground="White"
                                 BorderBrush="White"
                                 Margin="0 10 0 0"
-                            Width="590">
+                            Width="590" Click="Button_Click_1">
 
                     </Button>
                     <Button Content="3"
