--- a/View/Pages/MainPage.xaml
+++ b/View/Pages/MainPage.xaml
@@ -35,7 +35,7 @@
             <TextBlock Text="CAN YOU"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top"
-                       Margin="0,133,0,0"
+                       Margin="0,115,0,0"
                        FontSize="100"
                        FontFamily="Palatino Linotype"
                        >
@@ -46,7 +46,7 @@
             <TextBlock Text="FEEL MY"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top"
-                       Margin="0,217,0,0"
+                       Margin="0,191,0,0"
                        FontSize="120"
                        FontFamily="Palatino Linotype"
                        >
@@ -57,7 +57,7 @@
             <TextBlock Text="HEART"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top"
-                       Margin="0,301,0,0"
+                       Margin="0,273,0,0"
                        FontSize="170"
                        FontFamily="Palatino Linotype"
                        >
@@ -68,7 +68,7 @@
             <StackPanel>
                 <StackPanel Orientation="Vertical"
                                     HorizontalAlignment="Stretch"
-                                    Margin="0 500 0 0">
+                                    Margin="0 465 0 0">
 
                     <Button Content="1"
                                 Background="Gray"
@@ -77,6 +77,7 @@
                                 BorderBrush="White"
                                 Margin="0 0 0 0"
                                 Width="590" Click="Button_Click"
+                            FontFamily="Palatino Linotype"
                                 />
                     <Button Content="2"
                                 Background="Gray"
@@ -84,7 +85,7 @@
                                 Foreground="White"
                                 BorderBrush="White"
                                 Margin="0 10 0 0"
-                            Width="590" Click="Button_Click_1">
+                            Width="590" Click="Button_Click_1" FontFamily="Palatino Linotype">
 
                     </Button>
                     <Button Content="3"
@@ -93,21 +94,36 @@
                                 Foreground="White"
                                 BorderBrush="White"
                                 Margin="0 10 0 0"
-                            Width="590"/>
+                            Width="590" FontFamily="Palatino Linotype"/>
                     <Button Content="4"
                                 Background="Gray"
                             Opacity="0.3"
                                 Foreground="White"
                                 BorderBrush="White"
                                 Margin="0 10 0 0"
-                            Width="590"/>
+                            Width="590" FontFamily="Palatino Linotype"/>
                     <Button Content="5"
                                 Background="Gray"
                             Opacity="0.3"
                                 Foreground="White"
                                 BorderBrush="White"
                                 Margin="0 10 0 0"
-                            Width="590"/>
+                            Width="590" FontFamily="Palatino Linotype"/>
+                    <Button Content="6"
+                                Background="Gray"
+                            Opacity="0.3"
+                                Foreground="White"
+                                BorderBrush="White"
+                                Margin="0 10 0 0"
+                            Width="590" FontFamily="Palatino Linotype"/>
+                    <Button Content="7"
+                                Background="Gray"
+                            Opacity="0.3"
+                                Foreground="White"
+                                BorderBrush="White"
+                                Margin="0 10 0 0"
+                            Width="590" FontFamily="Palatino Linotype"
+                            />
                 </StackPanel>
 
 
