--- a/View/Pages/MainPage.xaml
+++ b/View/Pages/MainPage.xaml
@@ -94,14 +94,14 @@
                                 Foreground="White"
                                 BorderBrush="White"
                                 Margin="0 10 0 0"
-                            Width="590" FontFamily="Palatino Linotype"/>
+                            Width="590" FontFamily="Palatino Linotype" Click="Button_Click_2"/>
                     <Button Content="4"
                                 Background="Gray"
                             Opacity="0.3"
                                 Foreground="White"
                                 BorderBrush="White"
                                 Margin="0 10 0 0"
-                            Width="590" FontFamily="Palatino Linotype"/>
+                            Width="590" FontFamily="Palatino Linotype" Click="Button_Click_3"/>
                     <Button Content="5"
                                 Background="Gray"
                             Opacity="0.3"
